; ModuleID = '/home/carl/AnghaBench/freebsd/sys/amd64/vmm/intel/extr_ept.c_eptp.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/amd64/vmm/intel/extr_ept.c_eptp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EPT_PWLEVELS = common dso_local global i32 0, align 4
@PAT_WRITE_BACK = common dso_local global i32 0, align 4
@ept_enable_ad_bits = common dso_local global i64 0, align 8
@EPT_ENABLE_AD_BITS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @eptp(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @EPT_PWLEVELS, align 4
  %6 = sub nsw i32 %5, 1
  %7 = shl i32 %6, 3
  %8 = or i32 %4, %7
  %9 = load i32, i32* @PAT_WRITE_BACK, align 4
  %10 = or i32 %8, %9
  store i32 %10, i32* %3, align 4
  %11 = load i64, i64* @ept_enable_ad_bits, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %17

13:                                               ; preds = %1
  %14 = load i32, i32* @EPT_ENABLE_AD_BITS, align 4
  %15 = load i32, i32* %3, align 4
  %16 = or i32 %15, %14
  store i32 %16, i32* %3, align 4
  br label %17

17:                                               ; preds = %13, %1
  %18 = load i32, i32* %3, align 4
  ret i32 %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
